# scrape_the_law_mk3

./: .gitignore  PRD.md  README.md  _README.md  config.yaml  main.py  pyproject.toml  requirements.txt
algorithms/search_layer/url_extractor/: url_extractor.py
config/: README.md  config.py  pyproject.toml
config/utils/config/: _get_config.py  _get_config_files.py
dataclasses_/: dataclass_methods_parent_class.py  doc_content.py  doc_metadata.py  mysql_insert.py
dataclasses_/utils/: html_to_text.py
debug_logs/: _debug_logs_go_here.txt
development/input_layer/: input_layer.py
development/input_layer/autoscraper_web_scraper/: __init__.py  aiohttp_auto_scraper.py  async_auto_scraper.py  auto_scraper_base_class.py  file_path_to_dict.py  playwright_auto_scraper.py  requests_auto_scraper.py  sync_auto_scraper.py
development/input_layer/pdf_processor/: pdf_processor.py
development/input_layer/scheduler_service/: processing_job_dataclass.py  scheduler.py  trigger_dataclass.py
github_pulls/red_codes_scraper/crawler/: domains_fast.py  (+1 more)
input/: _input_goes_here.txt
output/: _output_goes_here.txt
tests/: conftest.py  test_async_pipeline.py
tests/web_scraper/: test_async_operations_web_scraper.py  test_basic_init_and_configs_web_scraper.py  test_error_and_edge_cases_web_scraper.py  test_html_fetching_web_scraper.py  test_html_processing_pipeline_web_scraper.py  test_integration_web_scraper.py  test_performance_web_scraper  test_result_extraction_web_scraper.py  test_rule_building_web_scraper.py  test_security_web_scraper.py
web_scraper/: requirements.txt
(+15 files in other folders)
