[project]
name = "get_samples_from_municode_mk2"
version = "0.1.0"
authors = ["Kyle Rose <kylemail1946@gmail.com>",]
description = "3nd version of scrape_the_law, per Endo's comments and critiques."
license = "MIT"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

["tool.hatch.build.targets.wheel"]
packages = [ "get_samples_from_municode_mk2",]

[tool.hatch.build.targets.wheel]
packages = [ "main",]
